[package]
name = "tf_sms"
version = "0.1.0"
authors = ["Endre Erős <endree@chalmers.se>"]
edition = "2018"

[dependencies]
r2r = { git = "https://github.com/sequenceplanner/r2r", version = "0.5.3" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "tf_sms"
path = "src/tf_sms.rs"

[[bin]]
name = "tf_sms_test_client"
path = "src/tf_sms_test_client.rs"
